--- a/frankenstein-backbone-and-marionette/application/frankenstein/index.html
+++ b/frankenstein-backbone-and-marionette/application/frankenstein/index.html
@@ -6,11 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Frankenstein</title>
     <!-- Bootstrap -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Raleway:300,400,500,600,700" rel="stylesheet">
+	<link href="css/style-layout.css" rel="stylesheet">
 	<!---
-	<link href="application/frankenstein/css/style-layout.css" rel="stylesheet">
-	<link href="application/frankenstein/css/bootstrap.css" rel="stylesheet">
+	<link href="css/styles.gold.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="application/frankenstein/css/styles.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	--->
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -20,8 +21,10 @@
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 		
-	<script type="text/javascript" src="application/frankenstein/js/frankenstein-config.js"></script>	
-	<script type="text/javascript" src="/frankenstein/lib/require.js" data-main="/frankenstein/require-config"></script>
+		
+	<script type="text/javascript" src="js/script.min.js"></script>	
+	<script type="text/javascript" src="js/frankenstein-config.js"></script>	
+	<script type="text/javascript" src="https://jkfrankenstein.netlify.app/frankenstein/lib/require.js" data-main="https://jkfrankenstein.netlify.app/frankenstein/require-config"></script>
   </head>
   <body>
   <div class="container-fluid">
